@@ -28,6 +28,10 @@ IN DEVELOPMENT
     * ``bzr unshelve`` gives a more palatable error if passed a non-integer
       shelf id. (Daniel Watkins)
 
+    * ``bzr missing`` now uses ``Repository.get_revision_delta()`` rather
+      than fetching trees and determining a delta itself. (Jelmer
+      Vernooij, #315048)
+
   DOCUMENTATION:
 
     * The documentation for ``shelve`` and ``unshelve`` has been clarified.
